--- a/build.xml
+++ b/build.xml
@@ -60,17 +60,17 @@
 		</javac>
 		
 		<!--  Compile module test java files -->
-				<javac destdir="build" classpathref="classpath" debug="true" debuglevel="lines,vars,source">
+		<!--		<javac destdir="build" classpathref="classpath" debug="true" debuglevel="lines,vars,source">
 					<src path="test/" />
 					<include name="**/*.java" />
-				</javac>
+				</javac>-->
 		
 		<!--  Compile module web java files -->
-		<javac destdir="build" classpathref="classpath" debug="true" debuglevel="lines,vars,source">
+		<!--<javac destdir="build" classpathref="classpath" debug="true" debuglevel="lines,vars,source">
 			<compilerarg line="-g" />
 			<src path="web/src/" />
 			<include name="**/*.java" />
-		</javac>
+		</javac>-->
 		
 	</target>
 	
@@ -107,9 +107,10 @@
 	     </copy>
 		
 		<!-- Copy test files -->
+		<!--
 			     <copy todir="build/">
 			     	<fileset dir="test" includes="*.xml" />
-			     </copy>
+			     </copy>-->
 		
 		<!-- Create distributable jar file -->
 		<jar destfile="dist/${module.id}-${module.version}.omod">
