--- a/.classpath
+++ b/.classpath
@@ -60,5 +60,6 @@
 	<classpathentry kind="lib" path="lib-common/openmrs-api-1.7.3.0-dev.jar"/>
 	<classpathentry kind="lib" path="lib-common/tests-openmrs-api-1.7.2.19959-dev.jar"/>
 	<classpathentry kind="lib" path="lib-common/web-openmrs-api-1.7.2.19959-dev.jar"/>
+	<classpathentry kind="lib" path="lib/ehcache-3.0.1.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
