--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -19,6 +19,10 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>logic-api</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>org.openmrs.api</groupId>
 			<artifactId>openmrs-api</artifactId>
 			<type>jar</type>
