--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>chirdlutilbackports</artifactId>
-	<version>2.8.0</version>
+	<version>2.8.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>chirdlutilbackports</name>
 	<description>Parent project for chirdlutilbackports</description>
