--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.openmrs.module</groupId>
         <artifactId>chirdlutilbackports</artifactId>
-        <version>2.8.1</version>
+        <version>2.9.0</version>
     </parent>
     <artifactId>chirdlutilbackports-api</artifactId>
     <packaging>jar</packaging>
@@ -49,6 +49,11 @@
             <groupId>org.openmrs.module</groupId>
             <artifactId>logic-api</artifactId>
         </dependency>
+        <dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>legacyui-omod</artifactId>
+			<type>jar</type>
+		</dependency>
     </dependencies>
     <build>
         <resources>
