--- a/api/pom.xml
+++ b/api/pom.xml
@@ -54,6 +54,10 @@
 			<artifactId>legacyui-omod</artifactId>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>			
+		</dependency>
     </dependencies>
     <build>
         <resources>
