--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.openmrs.module</groupId>
         <artifactId>chirdlutilbackports</artifactId>
-        <version>2.9.0</version>
+        <version>2.10.0-SNAPSHOT</version>
     </parent>
     <artifactId>chirdlutilbackports-api</artifactId>
     <packaging>jar</packaging>
@@ -53,6 +53,10 @@
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>legacyui-omod</artifactId>
 			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>			
 		</dependency>
     </dependencies>
     <build>
