--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.openmrs.module</groupId>
         <artifactId>chirdlutilbackports</artifactId>
-        <version>2.12.0-SNAPSHOT</version>
+        <version>2.12.0</version>
     </parent>
     <artifactId>chirdlutilbackports-api</artifactId>
     <packaging>jar</packaging>
