--- a/api/pom.xml
+++ b/api/pom.xml
@@ -12,6 +12,10 @@
     <description>API project for chirdlutilbackports</description>
 
     <dependencies>
+    	<dependency>
+		    <groupId>xml-apis</groupId>
+		    <artifactId>xml-apis</artifactId>
+		</dependency>
         <dependency>
             <groupId>org.openmrs.api</groupId>
             <artifactId>openmrs-api</artifactId>
