--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -13,6 +13,10 @@
 
 	<dependencies>
 		<dependency>
+		    <groupId>xml-apis</groupId>
+		    <artifactId>xml-apis</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>chirdlutilbackports-api</artifactId>
 			<version>${project.parent.version}</version>
