--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+			    <groupId>xml-apis</groupId>
+			    <artifactId>xml-apis</artifactId>
+			    <version>1.4.01</version>
+			    <scope>test</scope>
+			</dependency>
+			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>logic-api</artifactId>
 				<version>0.5.5</version>
@@ -279,12 +285,17 @@
 	</dependencyManagement>
 
 	<properties>
-		<openMRSVersion>2.0.6.3</openMRSVersion>
+		<openMRSVersion>2.4.2.1</openMRSVersion>
 	</properties>
 
 	<build>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+				   <groupId>org.apache.maven.plugins</groupId>
+				   <artifactId>maven-surefire-plugin</artifactId>
+				   <version>2.22.2</version>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
